Removed many depreciated methods following migration to Paper.